Fix dropdown z-index

--- a/src/features/tables/TableDropdown/TableDropdown.module.scss
+++ b/src/features/tables/TableDropdown/TableDropdown.module.scss
@@ -25,7 +25,7 @@
   border-radius: 0.375rem;
   border: 1px solid var(--secondary-color);
   gap: 0.25rem;
-  z-index: 50;
+  z-index: 10;
 }
 
 .item {
